validate/request-limit-deploy-correct.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deploy-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: my-deploy-2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: my-deploy-2
    spec:
      containers:
        - name: my-container
          image: nginx
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "0.5"
              memory: "512Mi"
            requests:
              cpu: "0.25"
              memory: "256Mi"
