validate/require-label-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deploy-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: my-deploy-1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: my-deploy-1
    spec:
      containers:
        - name: my-container
          image: nginx
          ports:
            - containerPort: 80
